# SolarXDataHub

./: .gitignore  .pre-commit-config.yaml  .releaserc.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  run.sh
.github/workflows/: github-ci.yml
solarxdatahub/: __main__.py  config.py
solarxdatahub/core/: controller.py
solarxdatahub/core/api/openweather/: __init__.py  openweather.py
solarxdatahub/core/api/solaxcloud/: __init__.py  solaxcloud.py
solarxdatahub/core/api/weatherbit/: __init__.py  weatherbit.py
solarxdatahub/database/: __init__.py  connection.py  crud.py  mysql_database.py  reading.py  writting.py
solarxdatahub/database/schemas/: create_tables.sql
solarxdatahub/models/: __init__.py  model_openweather.py  model_solaxcloud.py  model_weatherbit.py
solarxdatahub/types/: database.py  enums.py
solarxdatahub/utils/: ntfy.py
