[project]
name = "solarxdatahub"
version = "1.0.0"
description = ""
authors = [
    {name = "C0deByCata",email = "rotarucatalinr@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
mypy = "^1.14.1"
ipykernel = "^6.29.5"

